@@ -1,5 +1,6 @@
 pgcenter (devel) unstable; urgency=low
 
+  * pg-10: add support for updated pg_stat_replication (xlog -> wal).
   * change waiting connections accounting in postgres summary area.
   * make pg_stat_replication's xact_age,time_age optional, only when track_commit_timestamp is enabled.
   * use pg_roles instead of pg_authid due to https://github.com/lesovsky/pgcenter/issues/35.
